# Game-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Dependency.cmake  Example1.yaml  HISTORY.md  NewEngine.sublime-project  NewEngine.sublime-workspace  README.md  Resource Idea.txt  imgui.ini  main.cpp
.claude/skills/: SKILL.md
Client/include/: DemoApplication.h
Client/src/: DemoApplication.cpp  main.cpp
Docs/: DesignNotes_WorldScene.md  Design_Architecture.md  Design_Asset.md  Design_RHI.md  Design_Renderer.md  Design_Threading.md  Design_World.md  ProjectionMatrix.md
Engine/Private/Asset/: AssetCommander.cpp  AssetCommander.h  AssetFactory.cpp  AssetLoader.cpp  AssetLoader.h  AssetManager.cpp  AssetManager.h  AssetParser.cpp  AssetStream.cpp  AssetStream.h  AssetSystem.cpp  AssetUtils.cpp  AssetWorker.cpp  AssetWorker.h
Engine/Private/Framework/: Application.cpp  CommandList.h  Engine.cpp  FrameContext.cpp  FrameContext.h  FrameGate.cpp  FrameGate.h  FrameView.cpp  FrameView.h  InputStorage.cpp  InputTypes.cpp  Player.cpp  PlayerController.cpp  SceneView.cpp  SceneView.h  TaskWorker.cpp  ViewController.cpp  Worker.cpp  Worker.h
Engine/Private/RHI/: RHICommandExecutor.cpp  RHICommandExecutor.h  RHICommandList.cpp  RHICommands.cpp  RHIContext.h  RHIDefinitions.cpp  RHIDevice.h  RHIExecutor.cpp  RHIExecutor.h  RHIFrameExecutor.cpp  RHIFrameExecutor.h  RHIResources.cpp  RHISystem.cpp  RHISystem.h  RHITaskExecutor.cpp  RHITaskExecutor.h  RHIWorker.cpp  RHIWorker.h
Engine/Private/Renderer/: GlobalPipeLine.cpp  GlobalPipeLine.h  GlobalRenderer.cpp  GlobalRenderer.h  GlobalResource.cpp  GlobalResource.h  GlobalSampler.cpp  GlobalSampler.h  LightDesc.h  LightFactory.h  MaterialDesc.h  MeshBatch.cpp  MeshBatch.h  MeshDrawCommand.h  PipeLine.h  PipeLineGraph.h  RenderCommandList.cpp  RenderCommandList.h  RenderCommands.cpp  RenderContext.cpp  RenderContext.h  RenderGraph.cpp  RenderResource.h  RenderScene.cpp  RenderScene.h  RenderTypes.cpp  RenderWorker.cpp  RenderWorker.h  Renderer.cpp  SamplerState.cpp  SamplerState.h  ShaderSet.cpp  ShaderSet.h  ShaderState.cpp  ShaderState.h
Engine/Private/World/: Commander.cpp  Entity.cpp  Node.cpp  Scene.cpp  System.cpp  World.cpp  WorldCommandList.cpp  WorldCommands.cpp  WorldContext.cpp  WorldScene.cpp  WorldView.cpp  WorldWorker.cpp  WorldWorker.h
Engine/Public/Asset/: AssetFactory.h  AssetLoader.h  AssetManager.h  AssetParser.cpp  AssetParser.h  AssetResult.h  AssetSystem.h  AssetTypes.cpp  AssetTypes.h  AssetUtils.h  GLSLParser.cpp  GLSLParser.h  MTLParser.cpp  MTLParser.h  OBJParser.cpp  OBJParser.h  PNGParser.cpp  PNGParser.h  StbImageParser.cpp  StbImageParser.h  StbiImage.cpp  StbiImage.h
Engine/Public/Framework/: Application.h  Engine.h  FrameView.h  Name.cpp  Name.h  Player.h  PlayerController.h  Task.h  TaskWorker.h  ViewController.h  Window.h
Engine/Public/RHI/: RHICommandList.h  RHICommands.h  RHIDefinitions.h  RHIDescriptions.h  RHIResources.h  RHIStates.h  RHISystem.h  RHITypes.h
Engine/Public/Renderer/: RenderCommandList.h  RenderCommands.h  RenderGraph.h  RenderTask.h  RenderTypes.h  RenderView.h  Renderer.h
Engine/Public/World/: Commander.h  Component.cpp  Component.h  Entity.h  GraphBuilder.h  Node.cpp  Node.h  RenderNode.cpp  RenderNode.h  Scene.h  System.h  World.h  WorldCommandList.h  WorldCommands.h  WorldContext.h  WorldScene.h  WorldView.h
GameEngine/: Dependency.cmake  Design Engine  GameEngine.sublime-workspace
GameEngine/UML/: UML_2023_03_09.xmi
GameEngine/shader/: Basic.hlsl
GameEngine/src/: main.cpp
GameEngine/src/DX/: DXCommon.h
GameEngine/src/Object/: IResource.h  IResourceManager.h  Mesh.h  OBModel.cpp  OBModel.h  OBShader.cpp  OBShader.h  OBType.h  Scene.cpp  Scene.h  SceneManager.h  Shader.h  ShaderType.h
GameEngine/src/WIN/: WIN.cpp  WIN.h
OldVersionEngine2/FileDialog/: ProjectManager.cpp  ProjectManager.h
OldVersionEngine2/Layer/: GameLayer.cpp  PropertyBrowserGuiLayer.cpp  PropertyBrowserGuiLayer.h
Public/Renderer/: RenderView.h
UML/: NewEngine.xmi
asset/shader/: SimpleColor.ps.glsl  SimpleColor.vs.glsl  culling.cs.glsl  geometry_color.ps.glsl  geometry_color.vs.glsl  geometry_pbr_color.ps.glsl  geometry_texture.ps.glsl  geometry_texture.vs.glsl  lighting.vs.glsl  lighting_directional.ps.glsl  lighting_directional.vs.glsl  lighting_pbr.ps.glsl  lighting_point.ps.glsl  lighting_spot.ps.glsl  transform.cs.glsl  unlit_color.ps.glsl  unlit_color.vs.glsl  unlit_texture.ps.glsl  unlit_texture.vs.glsl
shader/: Basic.hlsl
src/: main.cpp
src/API/DirectX/: DirectXAPI.cpp  DirectXAPI.h  DirectXInput.cpp  DirectXInput.h
src/API/ImGui/: ImGuiAPI.cpp  ImGuiAPI.h  ImGuiUtils.h
src/API/UUID/: MyUUID.cpp  MyUUID.h
src/API/Window/: WinAPI.cpp  WinAPI.h
src/DX/: DXCommon.h  DXImGUICommon.h
src/DX/DXCamera/: DXCamera.cpp  DXCamera.h
src/DX/DXD3D/: DXD3D.cpp  DXD3D.h
src/DX/DXEngine/: DXEngine.cpp  DXEngine.h
src/DX/DXIMGUI/: DIFileBrowser.cpp  DIFileBrowser.h  DXImGUI.cpp  DXImGUI.h
src/DX/DXInput/: DXInput.cpp  DXInput.h
src/DX/DXMessage/: DXMessage.cpp  DXMessage.h
src/DX/DXTexture/: DXTexture.cpp  DXTexture.h
src/DX/DXType/: DXBuffer.h  DXData.h  DXWindow.h
src/DirectX/: DirectXAPI.cpp
src/Engine/Core/: Core.cpp  Core.h  Name.cpp  Name.h
src/Engine/CoreEngine/: Log.cpp
src/Engine/Entity/: Component.h  ComponentManager.h  Components.h  Entity.cpp  Entity.h  Node.h  NodeManager.h  Nodes.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SystemManager.cpp  SystemManager.h
src/Engine/Handler/: AssetHandler.cpp  AssetHandler.h  FileBrowserUIHandler.cpp  FileBrowserUIHandler.h  FileHandler.cpp  FileHandler.h  Handler.h  LogUIHandler.cpp  LogUIHandler.h  MainUIHandler.cpp  MainUIHandler.h  MenuBarUIHandler.cpp  MenuBarUIHandler.h  PropertyUIHandler.cpp  (+3 more)
src/ImGui/: ImGuiAPI.cpp
src/Object/: OBManager.cpp  OBManager.h  OBModel.cpp  OBModel.h  OBShader.cpp  OBShader.h
src/SUB/: SUBCommon.h
src/System/: System.cpp  System.h
src/UUID/: MyUUID.cpp  MyUUID.h
src/Utils/: Utils.h
src/WIN/: WIN.cpp  WIN.h
src/Window/: WinAPI.cpp  WinAPI.h
(+118 files in other folders)
